graph done✔️