@@ -1,14 +1,16 @@
 package com.example.xmlparser;
 
-import helpers.*;
 import helpers.LZW.Compressor;
 import helpers.LZW.Decompressor;
+import helpers.*;
+import helpers.utils.FileSaver;
 import javafx.application.Application;
 import javafx.geometry.Insets;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.TextArea;
 import javafx.scene.layout.HBox;
+import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
@@ -16,16 +18,18 @@ import javafx.stage.Stage;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 public class ProjectGUI extends Application {
     File openedFile;
+    FileSaver saver;
     TextArea leftTextArea = new TextArea();
     TextArea rightTextArea = new TextArea();
 
     @Override
     public void start(Stage stage) {
+
+        saver = FileSaver.getInstance();
 
         leftTextArea.setPrefRowCount(30);
         rightTextArea.setPrefRowCount(30);
@@ -42,6 +46,7 @@ public class ProjectGUI extends Application {
         Button compressorBtn = new Button("Compress");
         Button decompressBtn = new Button("Decompress");
         Button prettifyBtn = new Button("Prettify");
+        Button analyzeGraphBtn = new Button("analyze graph");
 
         openFileButton.setOnAction(event -> openFile());
         checkConsistency.setOnAction(event -> checkConsistency());
@@ -51,14 +56,16 @@ public class ProjectGUI extends Application {
         decompressBtn.setOnAction(event -> deCompress());
         compressorBtn.setOnAction(event -> compress());
         prettifyBtn.setOnAction(event -> prettify());
+        analyzeGraphBtn.setOnAction(event -> analyzeThis());
 
         HBox utilBtnBox = new HBox(checkConsistency, minifyBtn, toJsonBtn, correctXmlBtn, compressorBtn, decompressBtn, prettifyBtn);
-        VBox buttonBox = new VBox(openFileButton, utilBtnBox);
+        VBox buttonBox = new VBox(openFileButton, utilBtnBox, analyzeGraphBtn);
         HBox textBox = new HBox(leftTextArea, rightTextArea);
         VBox root = new VBox(textBox, buttonBox);
 
         root.setPadding(new Insets(10, 5, 10, 5));
         utilBtnBox.setPadding(new Insets(5, 0, 5, 0));
+        utilBtnBox.setSpacing(5);
         buttonBox.setPadding(new Insets(5, 0, 5, 0));
 
         stage.setScene(new Scene(root, 720, 480));
@@ -70,17 +77,15 @@ public class ProjectGUI extends Application {
     private void prettify() {
         try {
 
-        XmlPrettifies prettifies = new XmlPrettifies();
-        rightTextArea.setText(prettifies.prettify(openedFile));
-        }catch (Exception e){
+            XmlPrettifies prettifies = new XmlPrettifies();
+            rightTextArea.setText(prettifies.prettify(openedFile));
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     private void isFileOpened() {
-        if (openedFile == null)
-            openFile();
-        return;
+        if (openedFile == null) openFile();
     }
 
     private void openFile() {
@@ -88,7 +93,7 @@ public class ProjectGUI extends Application {
         openedFile = fileChooser.showOpenDialog(leftTextArea.getScene().getWindow());
         if (openedFile != null) {
             try {
-                String contents = new String(Files.readAllBytes(openedFile.toPath()), StandardCharsets.UTF_8);
+                String contents = Files.readString(openedFile.toPath());
                 leftTextArea.setText(contents);
             } catch (IOException e) {
                 System.out.println("Canceled");
@@ -107,7 +112,9 @@ public class ProjectGUI extends Application {
     private void deCompress() {
         openFile();
         Decompressor deCompressor = new Decompressor(openedFile);
-        rightTextArea.setText(deCompressor.deCompress());
+        String data = deCompressor.deCompress();
+//        saveToFile(data, "DecompressedFile", FILE_TYPE.text);
+        rightTextArea.setText(data);
     }
 
 
@@ -115,10 +122,8 @@ public class ProjectGUI extends Application {
         isFileOpened();
         XmlConsistencyChecker checker = new XmlConsistencyChecker(openedFile);
         rightTextArea.clear();
-        if (checker.checkConsistency())
-            rightTextArea.setText("the file is consistent");
-        else
-            rightTextArea.setText("the file is not consistent");
+        if (checker.checkConsistency()) rightTextArea.setText("the file is consistent");
+        else rightTextArea.setText("the file is not consistent");
     }
 
     private void minify() {
@@ -134,14 +139,17 @@ public class ProjectGUI extends Application {
 
     private void to_json() {
         isFileOpened();
-        XmlTree xmlTree = null;
+        XmlTree xmlTree;
         try {
             xmlTree = new XmlTree(openedFile);
+
+        String json = xmlTree.toJson();
+//        saveToFile(json,FILE_TYPE.json);
+        rightTextArea.setText(json);
         } catch (FileNotFoundException e) {
             e.printStackTrace();
             openFile();
         }
-        rightTextArea.setText(xmlTree.toJson());
     }
 
     private void correctXml() {
@@ -151,6 +159,14 @@ public class ProjectGUI extends Application {
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    public void analyzeThis() {
+        Stage stage = new Stage();
+        stage.setTitle("Social Network Analyzer");
+        stage.setScene(new Scene(new StackPane(), 300, 250));
+
+        stage.show();
     }
 
     public static void main(String[] args) {
